--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
       body {
         padding: 0px;
         margin: 0px;
+        background-image: url("cover.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: fixed;
       }
       #note {
         background-color: #b3b3ff;
@@ -45,10 +50,6 @@
         width: 100%;
         flex-wrap: wrap;
         justify-content: center;
-        background-image: url("cover.jpg");
-        background-position: cover;
-        background-attachment: fixed;
-        background-repeat: none;
       }
     </style>
     <meta charset="UTF-8" />
