--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Dancing+Script|Open+Sans&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
         padding: 0px;
@@ -41,6 +45,7 @@
       input {
         border-radius: 10px;
         outline: none;
+        height: 30px;
         background-color: black;
         color: white;
         padding-left: 5px;
@@ -50,6 +55,10 @@
         width: 100%;
         flex-wrap: wrap;
         justify-content: center;
+      }
+      #prabin {
+        font-family: "Open Sans", sans-serif;
+        font-family: "Dancing Script", cursive;
       }
     </style>
     <meta charset="UTF-8" />
@@ -88,6 +97,10 @@
             placeholder="Press Submit For Total"
           />
           <button onclick="total()">submit</button>
+        </div>
+        <div class="user">
+          <h2>Concept:-</h2>
+          <h4 id="prabin">Prabin Dhital</h4>
         </div>
       </div>
 
