--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       .container {
         display: flex;
         width: 100%;
+        height: 100%;
         flex-wrap: wrap;
         justify-content: center;
       }
