change the font size

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         background-color: black;
         color: white;
         padding-left: 5px;
+        font-weight: bold;
+
       }
       .container {
         display: flex;
@@ -204,6 +206,7 @@
         document.getElementById("totalSale").innerHTML =
           totalAmount - openingAmount;
       }
+      // change the color of input if the user put some number in it 
     </script>
   </body>
 </html>
